k8s/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: index
  namespace: k8s-1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: index
  template:
    metadata:
      labels:
        app: index
    spec:
      containers:
      - name: index
        image: 861531569385.dkr.ecr.us-west-1.amazonaws.com/sparkjava
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
