k8s/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: index-svc
  namespace: k8s-1
spec:
  selector:
    app: index
  ports:
  - port: 80
    targetPort: 80
